tests/semantica/valid/asignacion/test4.ctds
program 
    {
		integer x = 2;
		
		void main(){
			x = -x;
		}
    }